@@ -2,6 +2,7 @@
 =======
 - Allow all arguments in the terminal parameters (part of bug #5301).
 - Fix some issues in exo-open with spaces in arguments.
+- Properly handle NULL pixbufs in the toolbars code.
 
 0.3.101
 =======
